# Event-Horizon

./: .gitignore  .gitmodules  README.md  credits.gd  credits.gd.uid  credits.tscn  game.gd.uid  global_variables.gd  global_variables.gd.uid  project.godot  rich_text_label.gd.uid  scroll_container.gd.uid
assets/: ship.png.import
assets/UI & UX/: Button boxes.kra  logo.gif.kra
assets/UI & UX/logo frames/: logo.mkv
assets/drafts/: basic resources - draft.png.import  basic resources - draft.png~  boost fuel.png.import
assets/planets/: jupiter.png.import  mars.png.import
assets/planets/cold/: cold1.png.import  cold2.png.import  cold3.png.import  cold4.png.import  cold5.png.import  cold6.png.import
assets/planets/dust/: dust1.png.import  dust2.png.import  dust3.png.import  dust3.png.kra
assets/planets/gas/: gas1.png.import
assets/planets/goldilocks/: planet.png.import  planet2.png.import  planet3.png.import  planet4.png.import  planet5.png.import  planet6.png.import  planet7.png.import  planet7.png~
assets/planets/lava/: lava1.png.import  lava2.png.import  lava3.png.import
assets/ships/ship1/: ship1_Nthrust.png.import  ship1_thrust.png.import
assets/ships/ship2/: .png.import  ship2Ntrust.png.import
assets/ships/ship3/: ship3.png.import  ship3Ntrust.png.import
native/: CMakeLists.txt  native.gdextension  native.gdextension.uid
native/src/: Engine.cpp  Engine.hpp  Event.cpp  Event.hpp  EventHorizonGame.cpp  EventHorizonGame.hpp  EventHorizonShipController.cpp  EventHorizonShipController.hpp  GravitationalObject.cpp  GravitationalObject.hpp  Object.cpp  Object.hpp  engine.cpp  register.cpp
scenes/credits/: GodotCredits.gd  GodotCredits.gd.uid  credits.tscn  test test test test test test test.txt
scenes/game/: bodies.gd  bodies.gd.uid  game.gd  game.gd.uid  game.tscn  orbit.gd  orbit.gd.uid  ship.png.import  user_interface.tscn
scenes/game/ship1/: ship1.tscn
scenes/game/thruster/: thruster.gd  thruster.gd.uid  thruster.gdshader  thruster.gdshader.uid  thruster.tscn
scenes/main_menu/: animated_sprite_2d.gd.uid  credits_button.gd  credits_button.gd.uid  main_menu.gd  main_menu.gd.uid  main_menu.gdshader.uid  main_menu.tscn  start_game_button.gd  start_game_button.gd.uid
